# GoIT-Final-Project

./: DL_models.ipynb  Decision_Tree_model.pkl  Dockerfile  Final_GoIT_Project.py  GoIT_Final_Project_data_analysis.ipynb  Logistic_Regression_model.pkl  ML_models.ipynb  README.md  data_analysis.py  df_for_prediction_test.csv  docker-compose.yml  instr_docker.txt  model_evaluation.py  neural_network_model.h5  pyproject.toml  requirements.txt
